--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -18,9 +18,15 @@ android {
         }
     }
 }
-
+repositories {
+    mavenCentral()
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile "com.squareup.picasso:picasso:2.4.0"
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
