--- a/Faster5/app/src/main/AndroidManifest.xml
+++ b/Faster5/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,6 +32,7 @@
         <activity android:name=".SplashScreen"></activity>
         <activity android:name=".InfoScreen"></activity>
         <activity android:name=".MainScreen"></activity>
+        <activity android:name=".TestInfo"></activity>
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
