--- a/Faster5/app/src/main/AndroidManifest.xml
+++ b/Faster5/app/src/main/AndroidManifest.xml
@@ -4,13 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -19,9 +21,14 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".MainActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+
+            />
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode = "stateAlwaysVisible"
             >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +39,7 @@
         <activity android:name=".SplashScreen"></activity>
         <activity android:name=".InfoScreen"></activity>
         <activity android:name=".MainScreen"></activity>
-        <activity android:name=".TestInfo"></activity>
+        <activity android:name=".WellcomeScreen"></activity>
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
