--- a/Faster5/app/src/main/AndroidManifest.xml
+++ b/Faster5/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
             />
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode = "stateAlwaysVisible"
             >
 
             <intent-filter>
@@ -35,11 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginScreen"></activity>
+        <activity android:name=".LoginScreen"
+            android:windowSoftInputMode="stateVisible|adjustResize"></activity>
         <activity android:name=".SplashScreen"></activity>
         <activity android:name=".InfoScreen"></activity>
         <activity android:name=".MainScreen"></activity>
         <activity android:name=".WellcomeScreen"></activity>
+        <activity android:name=".SearchOpponent"></activity>
+        <activity android:name=".GameOver"></activity>
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
