--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 repositories {
     mavenCentral()
@@ -32,7 +33,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'com.android.support:multidex:1.0.1'
-
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
