--- a/Faster5/app/src/main/AndroidManifest.xml
+++ b/Faster5/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name="com.example.gcs.faster5.network.SocketIO"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
