--- a/Faster5/app/src/main/AndroidManifest.xml
+++ b/Faster5/app/src/main/AndroidManifest.xml
@@ -31,14 +31,12 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity
+        <activity xmlns:tools="http://schemas.android.com/tools"
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@style/FullyTranslucent"
-            xmlns:tools="http://schemas.android.com/tools"
-            tools:replace="android:theme"
-            />
+            tools:replace="android:theme" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
