--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -29,9 +30,9 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -42,9 +43,10 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'me.grantland:autofittextview:0.2.+'
+    compile 'me.grantland:autofittextview:0.2.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
+    compile 'com.github.khacpv:multiple-parallax-view:43956df'
     compile('io.socket:socket.io-client:0.7.0')
     {
         exclude group: 'org.json', module: 'json'
