--- a/Faster5/build.gradle
+++ b/Faster5/build.gradle
@@ -11,6 +11,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
