--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -29,9 +29,9 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -45,6 +45,7 @@ dependencies {
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
+    compile 'com.github.khacpv:multiple-parallax-view:-SNAPSHOT'
     compile('io.socket:socket.io-client:0.7.0')
     {
         exclude group: 'org.json', module: 'json'
