--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -31,24 +31,20 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'me.grantland:autofittextview:0.2.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
     compile 'com.github.khacpv:multiple-parallax-view:8c83f48'
     compile('io.socket:socket.io-client:0.7.0')
-    {
-        exclude group: 'org.json', module: 'json'
-    }
+            {
+                exclude group: 'org.json', module: 'json'
+            }
 }
