--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.game.oic.ailatrieuphu"
+        applicationId "com.oic.game.ailatrieuphu"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -43,8 +43,13 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
     compile 'com.github.khacpv:multiple-parallax-view:8c83f48'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.google.firebase:firebase-storage:9.6.1'
     compile('io.socket:socket.io-client:0.7.0')
             {
                 exclude group: 'org.json', module: 'json'
             }
+
 }
+
+apply plugin: 'com.google.gms.google-services'
