--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -29,7 +29,11 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    compile('io.socket:socket.io-client:0.7.0')
+            {
+                exclude group: 'org.json', module: 'json'
+            }
+
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
@@ -45,11 +49,9 @@ dependencies {
     compile 'com.github.khacpv:multiple-parallax-view:8c83f48'
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.google.firebase:firebase-storage:9.6.1'
-    compile('io.socket:socket.io-client:0.7.0')
-            {
-                exclude group: 'org.json', module: 'json'
-            }
-
+    compile 'com.google.firebase:firebase-ads:9.6.1'
+    testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
