--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.google.firebase:firebase-ads:9.6.1'
+    compile 'com.google.firebase:firebase-crash:9.6.1'
+    compile 'com.google.firebase:firebase-database:9.6.1'
     testCompile 'junit:junit:4.12'
 }
 
