--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply from: "../autodimension.gradle"
 
 android {
     compileSdkVersion 24
@@ -52,8 +53,10 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:9.6.1'
     compile 'com.google.firebase:firebase-crash:9.6.1'
     compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-core:9.6.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
