--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -6,11 +6,11 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.oic.game.ailatrieuphu"
+        applicationId "com.game.oic.ailatrieuphu"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
