--- a/Faster5/app/build.gradle
+++ b/Faster5/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:9.6.1'
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'io.github.kobakei:ratethisapp:1.1.0'
+    compile 'com.github.hotchemi:android-rate:1.0.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     testCompile 'junit:junit:4.12'
 }
